deploy/kustomize/overlays/dev/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: orderflow-order }
spec:
  template:
    spec:
      containers:
        - name: orderflow-order
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits:   { cpu: 200m, memory: 256Mi }
---
apiVersion: apps/v1
kind: Deployment
metadata: { name: orderflow-payment }
spec:
  template:
    spec:
      containers:
        - name: orderflow-payment
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits:   { cpu: 200m, memory: 256Mi }
---
apiVersion: apps/v1
kind: Deployment
metadata: { name: orderflow-inventory }
spec:
  template:
    spec:
      containers:
        - name: orderflow-inventory
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits:   { cpu: 200m, memory: 256Mi }
---
apiVersion: apps/v1
kind: Deployment
metadata: { name: orderflow-saga }
spec:
  template:
    spec:
      containers:
        - name: orderflow-saga
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits:   { cpu: 200m, memory: 256Mi }
